--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,22 +1,22 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>KBR ♡ KSG (1 year anniversary ♥)</title>
     </head>
     <body>
         <div>
-            <h1><a href="">Django Girls Blog</a></h1>
+            <h1><a href="">KBR ♡ KSG (1 year anniversary ♥)</a></h1>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>published: 19.06.2018, 01:24(Deggendorf, Germany)</p>
+            <h2><a href="">1주년♥</a></h2>
+            <p>사랑하는 마음이 지구 반대편에 있는 보람이에게 전해지길 바라며 .. ♥ (독일, 데겐도르프에서)</p>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+            <p>published: 19.06.2018, 01:24(Deggendorf, Germany)</p>
+            <h2><a href="">1 jähriges Jubiläum ♥</a></h2>
+            <p>hoffentlich mein Liebe zu dir nach Südkorea erreichbar sein würde  </p>
         </div>
     </body>
 </html>
